# be-timelesslove-v1.0.0

./: .dockerignore  .env.example  .env.local.example  .gitignore  AGENTS.md  AWS_LIGHTSAIL_DEPLOYMENT.md  CLAUDE.md  Dockerfile  Dockerfile.production  FRONTEND_INTEGRATION.md  INTEGRATION.md  README.md  TEST_RESULTS.md  docker-compose.dev.yml  docker-compose.production.yml  docker-compose.yml  env.example  pyproject.toml  requirements.txt  sitecustomize.py  usercustomize.py
.mypy_cache/3.13/: __future__.data.json  __future__.meta.json  __main__.data.json  __main__.meta.json  _ast.data.json  _ast.meta.json  (+231 more)
adapters/: Adapter Integration.md  __init__.py  client.py  config.py
app/: __init__.py  config.py  main.py
demo-frontend/: DEMO_SUMMARY.md  Dockerfile.dev  QUICK_START.md  README.md  env.example  package.json
deployment/: deploy.sh  health-check.sh  logs.sh  setup-lightsail.sh  setup-ssl.sh  update.sh
docs/: getting-started.md
nginx/: .gitignore  nginx.conf
scripts/: README.md  apply_all_setup.py  apply_migrations_and_bucket.sh  apply_migrations_via_sql_editor.md  check_supabase_readiness.sh  create_bucket.py  generate_openapi.py  populate_test_data.py  pre-deploy-check.sh  setup_complete.sh  setup_supabase.py  supabase_config.py  test_auth_integration.sh  validate_auth_config.py  verify_supabase.py
tests/: __init__.py  conftest.py  test_adapters.py  test_auth.py  test_contract_alignment.py  test_contracts.py  test_e2e_flows.py  test_feed.py  test_graph_db.py  test_invites.py  test_memories.py  test_rbac.py  test_storage.py  test_supabase_auth.py
(+630 files in other folders)
